# comparison_of_time_series_methods

./: .gitignore  02_fdk_delhi_monthly_prophet.ipynb  03_fdk_delhi_weekly_prophet.ipynb  04_fdk_delhi_weekly_BSTM_model.ipynb  04_fdk_delhi_weekly_BSTS_model.ipynb  05_fdk_deep_learning_1.ipynb  Makefile  README.md  main.py  main_plot.py  pyproject.toml
comparison_of_time_series_methods/: main.py
data/: Data.py  airline_passengers.py  data_from_csv.py  ecmwf_weather_data.py  electricity_consumption.py  impute.py  impute_data.py  india_pollution.py  list_of_tuples.py  load.py  report.py  seasonal_decompose.py  stock_prices.py  sun_spots.py
measurements/: get_metrics.py  store_metrics.py
methods/: AR.py  ARIMA.py  FCNN.py  FCNN_embedding.py  HoltWinters.py  MA.py  SARIMA.py  SES.py  auto_arima.py  comparison_plot.py  comparison_plot_multi.py  decompose.py  get_metrics.py  json_report_loader.py  kalman_filter.py  linear_regression.py  measure.py  plot.py  plot_correlation_n_points.py  plot_results_in_box_plot.py  plot_results_in_heatmap.py  plot_results_in_scatter_plot.py  predict.py  prophet.py  report_loader.py  seasonal_decompose.py  store_metrics.py  tsetlin_machine.py
notebooks/: 01_fdk_data_explore.ipynb  02_fdk_delhi_monthly_prophet.ipynb  03_fdk_delhi_weekly_prophet.ipynb  06_fdk_VAR_pollution.ipynb  07_fdk_linreg_pollution.ipynb  09_weather_data_proto.ipynb  DevDay_01_electricity_consumption.ipynb  DevDay_02_challenges_with_data.ipynb  DevDay_02_single_model.ipynb  DevDay_03_apply_and_evaluate_techniques.ipynb  DevDay_03_challenges_with_data.ipynb  DevDay_04_apply_and_evaluate_techniques.ipynb  PyData_Malaga_01_electricity_consumption.ipynb  PyData_Malaga_02_single_model.ipynb  PyData_Malaga_03_challenges_with_the_data.ipynb  fdk_xgboost_multivar_features_ts.ipynb
plots/: color_map_by_method.py  comparison_plot.py  comparison_plot_multi.py  plot_correlation_Npoints.py  plot_correlation_n_points.py  plot_results_in_box_plot.py  plot_results_in_heatmap.py  plot_results_in_scatter_plot.py
predictions/: AR.py  ARIMA.py  FCNN.py  FCNN_embedding.py  HoltWinters.py  MA.py  Prediction.py  SARIMA.py  SES.py  auto_arima.py  kalman_filter.py  linear_regression.py  prophet.py  tsetlin_machine.py
reports/: load.py  report_loader.py
tests/: test_json_to_predictiondata_object.py
write_up/: 01_fdk_tech_report_TS.aux  01_fdk_tech_report_TS.fdb_latexmk  01_fdk_tech_report_TS.fls  01_fdk_tech_report_TS.out  01_fdk_tech_report_TS.tex
