[tool.poetry]
name = "india_air_pollution_study"
version = "0.1.0"
description = ""
authors = ["swhustla <fdkelly@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
jupyterlab = "^3.4.3"
pandas = "1.3.5"
kaggle = "^1.5.12"
torch = "^1.11.0"
matplotlib = "^3.5.2"
black = "^22.3.0"
nb-black = "^1.0.7"
prophet = "1.0"
plotly = "^5.8.2"
tensorflow-macos = "^2.9.2"
scipy = "^1.8.1"
arch = "^5.3.1"
pmdarima = "^1.8.5"
pandas-datareader = "^0.10.0"
pystan = "2.19.1.1"
wheel = "^0.37.1"
GDAL = "^3.5.2"
pdflatex = "^0.1.3"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}
pylint = "^2.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
