[tool.poetry]
name = "india_air_pollution_study"
version = "0.1.0"
description = ""
authors = ["swhustla <fdkelly@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyterlab = "^3.4.3"
pandas = "1.3.5"
kaggle = "^1.5.12"
torch = "^1.12.1"
matplotlib = "^3.5.2"
prophet = "1.0"
plotly = "^5.8.2"
tensorflow-macos = "^2.9.2"
scipy = "^1.8.1"
arch = "^5.3.1"
pmdarima = "^1.8.5"
pystan = "2.19.1.1"
wheel = "^0.37.1"
GDAL = "^3.6.1"
pdflatex = "^0.1.3"
pyTsetlinMachine = "^0.6.2"
geopy = "^2.2.0"
folium = "^0.13.0"
miceforest = "^5.6.2"
ecmwf-api-client = "^1.6.3"
seaborn = "^0.12.1"
yfinance = "^0.1.93"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}
pylint = "^2.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
